hot fix for semantic ui dimmable on firefox

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -11,6 +11,9 @@ html, body, div, nav, section, article, header, footer, h1, h2, h3, h4
   line-height: 1em
   +box-sizing(border-box)
 
+body.ui.dimmable
+  position: static
+
 p
   line-height: 1.5em
 
@@ -75,6 +78,7 @@ a, a:link
     .column
       margin-top: 0
       padding-top: 1rem
+
       .wrapper
         background-color: rgba(#fff, 0.7)
         +box-shadow(0 0 1px rgba(#000,0.2))
